Illustratr: Fix hidden .site-branding issue on mobile devices. Reported on GitHub: https://github.com/Automattic/illustratr-wordpress-theme/issues/2

--- a/style.css
+++ b/style.css
@@ -946,7 +946,9 @@ body {
 	}
 }
 @media screen and (max-width: 767px) {
-	.site-branding,
+	.site-branding {
+		width: auto;
+	}
 	.site-image,
 	.main-navigation,
 	.footer-area,
